Add arglines with changes for JDK 17,Remove MaxPermSize option from arquillian.xml (Thanks Scott Stark + Brian for the help)
Signed-off-by: Scott Marlow <smarlow@redhat.com>